oxford comma in title

--- a/fat18.bib
+++ b/fat18.bib
@@ -1,6 +1,6 @@
 @Proceedings{FAT-2018,
     year = 	 2018,
-    booktitle = {Proceedings of the 1st Conference on Fairness, Accountability and Transparency},
+    booktitle = {Proceedings of the 1st Conference on Fairness, Accountability,and Transparency},
     name = {Conference on Fairness, Accountability and Transparency},
     shortname = {FAT*},
     editor = 	 {Friedler, Sorelle A. and Wilson, Christo},
@@ -141,7 +141,7 @@
 	title = {Keynote 1},
 	section = {Keynotes},
 	pages = {3-3},
-	abstract = {}
+	abstract = {Not available at time of publication.}
 }
 
 @InProceedings{hellman18,
@@ -149,7 +149,7 @@
 	title = {Keynote 2},
 	section = {Keynotes},
 	pages = {4-4},
-	abstract = {}
+	abstract = {We distinguish among people all the time, on the basis of all sorts of traits and for a myriad of reasons.  Sometimes doing so is clearly permissible.  Sometimes doing so is clearly impermissible.  And sometimes people disagree about whether particular policies or practices are permissible or not.  What explains which are which?  There are no simple answers.  Rather, philosophers and legal scholars have different ideas about which instances are wrongful discrimination and why.  In addition, they disagree about what evils discrimination law aims to eradicate.  In this talk, I will survey the different answers that scholars give to these questions and the debates these various approaches give rise to.}
 }
 
 @InProceedings{friedler18,
